--- a/index.ipynb
+++ b/index.ipynb
@@ -188,14 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return restaurant\n",
-    "    relse"
+    "    else:\n",
+    "        return alternative"
    ]
   },
   {
