Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    restaurants_that_are_open"
+    "    restaurants_that_are_open = []\n",
+    "    for rest"
    ]
   },
   {
