--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    restaurants_that_are_open = []\n",
-    "    for restaurant in restaurants\n"
+    "    for restaurant in restaurants:\n",
+    "        if "
    ]
   },
   {
