Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
     "def open_restaurants(restaurants):\n",
     "    restaurants_that_are_open = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed'] == False"
+    "        if restaurant['is_closed'] == False:\n",
+    "            restaurants_th"
    ]
   },
   {
