Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
     "    restaurants_that_are_open = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            restaurants_that_are_open.append(res)"
+    "            restaurants_that_are_open.append(restaurant)\n",
+    "            "
    ]
   },
   {
