--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            restaurants_that_are_open.append(restaurant)\n",
-    "    return restaurants"
+    "    return restaurants_that_are_open"
    ]
   },
   {
